--- a/open.html
+++ b/open.html
@@ -5,7 +5,8 @@
   <title>Open Tabs</title>
 </head>
 <body>
-  <h3>タブを開いています...</h3>
+  <h3>以下のボタンをクリックしてタブを開いてください</h3>
+  <button id="openTabs">タブを開く</button>
   <script src="open.js"></script>
 </body>
 </html>
